Added a site layout

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,13 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<!DOCTYPE html>
+<html> 
+	<head>
+		<title>Social Content Sharing | <%= @title %></title>
+	</head>
+	<body>
+		<h1>Social Content Sharing App</h1>
+		<p>
+			This is the home page for the Social Content Sharing App. More info. coming soon......
+		</p>
+	</body>
+
+</html>
