Added a title helper

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html> 
 	<head>
-		<title>Social Content Sharing | <%= @title %></title>
-	<%= csrf_meta_tag %>
+		<title><%= title %></title>
+		<%= csrf_meta_tag %>
 	</head>
 	<body>
-	<%= yield %>
+		<%= yield %>
 	</body>
-
 </html>
